<resources>
    <string name="app_name" translatable="false">FowCube</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Data strings -->
    <string name="card">Card</string>
    <string name="cards">Cards</string>
    <string name="collection">Collection</string>
    <string name="collections">Collections</string>
    <string name="dismiss">Dismiss</string>
    <string name="name">Name</string>
    <string name="create">Create</string>

    <!-- Menu strings -->
    <string name="menu_cards">Cards</string>
    <string name="menu_collections">Collections</string>
    <string name="menu_home">Home</string>
    <string name="menu_send">Send</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>

    <!-- Home strings -->
    <string name="user_collection_title">Your collections</string>
    <string name="explore_collection">Explore</string>
    <string name="share_collection">Share</string>
    <string name="rename_collection">Rename</string>
    <string name="home_welcome">Welcome back! I\'m not updated because my developer haven\'t enough time</string>
</resources>
