<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <!--<item android:title="@string/menu">
            <menu>-->
                <item
                    android:id="@+id/nav_collections"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_collections" />

        <item android:id="@+id/nav_cards"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/menu_cards" />

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
            <!--</menu>
        </item>-->
    </group>

</menu>
