<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="it.danieletentoni.fowcube.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_collectionsFragment"
            app:destination="@id/nav_collections" />
    </fragment>
    <fragment
        android:id="@+id/nav_collections"
        android:name="it.danieletentoni.fowcube.ui.collections.CollectionsFragment"
        android:label="@string/menu_collections"
        tools:layout="@layout/fragment_collection_list" >
        <action
            android:id="@+id/action_collectionsFragment_to_collectionCardsFragment"
            app:destination="@id/collectionCardsFragment" />
    </fragment>
    <fragment
        android:id="@+id/collectionCardsFragment"
        android:name="it.danieletentoni.fowcube.ui.collectioncards.CollectionCardsFragment"
        android:label="@string/cards" >
        <argument
            android:name="collectionId"
            app:argType="string"
            app:nullable="true" />
    </fragment>
</navigation>