<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/text_margin"
    android:minHeight="150dp"
    android:minWidth="200dp"
    app:layout_constraintCircleRadius="5dp"
    android:background="@color/colorSecondaryAccent">

        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/cards"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/card_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/cards"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/explore_button"
            app:layout_constraintBottom_toTopOf="@+id/explore_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/explore_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:paddingStart="@dimen/text_margin"
            android:paddingEnd="@dimen/text_margin"
            android:text="@string/explore_collection"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/card_subtitle"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:paddingStart="@dimen/text_margin"
            android:paddingEnd="@dimen/text_margin"
            android:text="@string/share_collection"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/explore_button"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>